# gmail_mcp

./: README.md  pyproject.toml  requirements.txt  talk2gmail.py
